# assumpta

./: .gitignore  .travis.yml  DEVELOPMENT.md  README.md  TODO.md  assumpta.cabal  stack-lts-12.26.yaml  stack.yaml
.circleci/: config.yml
examples/: Makefile  simple-client-session-bs.hs  simple-client-session-text.hs
scripts/: stack-test.sh
src/Network/Mail/: Assumpta.hs
src/Network/Mail/Assumpta/: ByteString.hs  Net.hs  String.hs  Text.hs
src/Network/Mail/Assumpta/Internal/: Net.hs
test-hspec/Network/Mail/Assumpta/: ByteStringSpec.hs
